[workspace]
members = ["jito-protos", "jito-client"]
resolver = "2"

[workspace.package]
rust-version = "1.80.0"
version = "0.1.0"

[workspace.dependencies]
bincode = "1.3.3"
bytes = "1.10.0"
futures-util = "0.3.31"
jito-protos = { path = "jito-protos" }
log = "0.4"
prost = "0.12"
prost-types = "0.12"
solana-client = "3.0.0"
solana-metrics = "3.0.0"
solana-packet = "3.0.0"
solana-perf = "3.0.0"
solana-sdk = "3.0.0"
solana-transaction-status = "3.0.0"
thiserror = "2.0.11"
tokio = "1"
tonic = { version = "0.10", features = ["tls", "tls-roots", "tls-webpki-roots"] }
tonic-build = "0.10"
